Fix small display wrap

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1299,6 +1299,15 @@ body.is-touch {
 @include breakpoint(medium) {
   $size-header-pad: 4em;
 
+  .projectDisplay {
+    flex-direction: column;
+    .projectImages {
+      align-self: center;
+    }
+    .projectDetails {
+      width: 100%;
+    }
+  }
   /* Basic */
 
   h1,
